modules/security/oidc-proxy/base/dex/workloads/configs/networkpolicies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dex
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector: {}
    ports:
    - port: 0
      protocol: TCP
  - from:
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
    - port: 0
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-oidc-proxy-dex
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels: {}
    ports:
    - port: 0
      protocol: TCP
